📝 (how-i-got-my-first-coding-job.md): correct formatting of time reference by removing HTML span tag for better readability ✨ (main.css): add new CSS class .time to style time references with small-caps and lowercase text transformation for improved aesthetics

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -29,6 +29,11 @@ a {
     color: rgb(165, 173, 203);
 }
 
+.time {
+    font-variant: small-caps;
+    text-transform: lowercase;
+}
+
 article {
     font-size: 21px;
     line-height: 1.55;
